--- a/gaga/css/counter.css
+++ b/gaga/css/counter.css
@@ -8,6 +8,7 @@ THIS YOU NEED TO KEEP.
 */
 
 h1 {
+  margin-top: 80px;
   font: 60px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 300;
 }
@@ -15,6 +16,16 @@ h1 {
 h1 span {
   color: #0084B4;
   font-weight: 400;
+}
+
+body {
+  text-align: center;
+}
+
+#wrapper {
+  width: 400px;
+  margin-left: auto ;
+  margin-right: auto ;
 }
 
 ul.cd{float:left;list-style-type:none;margin:0;padding:0}
