--- a/gaga/css/counter.css
+++ b/gaga/css/counter.css
@@ -19,6 +19,8 @@ h1 span {
 }
 
 body {
+  margin:0;
+  padding:0;
   text-align: center;
   background-color: #333;
   color: #fff;
@@ -37,6 +39,16 @@ body {
 #wrapper p {
   clear: both;
   height: 20px;
+}
+
+#widget {
+  width: 700px;
+  margin-left: auto ;
+  margin-right: auto ;
+}
+
+.twtr-tweet-text {
+  font-size: 30px;
 }
 
 ul.cd{float:left;list-style-type:none;margin:0;padding:0}
