Try out an image

--- a/gaga/css/counter.css
+++ b/gaga/css/counter.css
@@ -22,7 +22,7 @@ body {
   margin:0;
   padding:0;
   text-align: center;
-  background-color: #333;
+  background-color: #000;
   color: #fff;
 }
 
@@ -49,6 +49,12 @@ body {
 
 .twtr-tweet-text {
   font-size: 30px;
+}
+
+#footer {
+  position: relative;
+  bottom: 0;
+  z-index: 5;
 }
 
 ul.cd{float:left;list-style-type:none;margin:0;padding:0}
